Git_WGBH_QC/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>age_range__c</fullName>
        <description>Age Range</description>
        <inlineHelpText>Select the Age Range for the Contact.</inlineHelpText>
        <label>Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18-24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35-39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55-59</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65-74</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>alt_account_id__c</fullName>
        <description>Alt Account Id</description>
        <label>Alternate Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ETL migration process</description>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <description>Comments</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deceased_date__c</fullName>
        <description>Deceased Date</description>
        <label>Date of Death</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deceased_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deceased Flag</description>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <description>Gender</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both -Only for account gender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gender_value__c</fullName>
        <description>Gender Value</description>
        <label>Gender Value</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maiden_name__c</fullName>
        <description>Maiden Name</description>
        <label>Maiden Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>middle_name__c</fullName>
        <description>Middle Name</description>
        <label>Middle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name_line__c</fullName>
        <description>Name Line</description>
        <label>Name Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salutation_flag__c</fullName>
        <description>Salutation Flag</description>
        <label>Salutation Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Contact_Source__c</fullName>
        <label>Contact Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Image_Url__c</fullName>
        <label>Facebook Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Picture__c</fullName>
        <formula>HYPERLINK(sf4twitter__Fcbk_Profile_Url__c,
IF( ( NOT( ISBLANK( sf4twitter__Fcbk_Image_Url__c  ) )), IMAGE( sf4twitter__Fcbk_Image_Url__c  ,sf4twitter__Fcbk_Profile_Url__c, 48, 48), sf4twitter__Fcbk_Profile_Url__c )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facebook Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Profile_Url__c</fullName>
        <label>Facebook Profile Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Facebook User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Username__c</fullName>
        <label>Facebook Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Follow_Status__c</fullName>
        <description>Click on link to change following status</description>
        <formula>HYPERLINK(
&apos;javascript:window.location=&quot;/apex/sf4twitter__TwitterFollow?cid=&apos; + Id + &apos;&quot; + ( ( (new RegExp(&quot;[\\?&amp;]isdtp=([^&amp;#]*)&quot;)).exec(window.location.href) == null )?&quot;&quot;: &quot;&amp;isdtp=vw&quot;) &apos;, 
IF(sf4twitter__followed__c == true,&apos;Yes&apos;, &apos;No&apos; ), 
&apos;_self&apos;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click on link to change following status</inlineHelpText>
        <label>Following On Twitter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Influencer_Type__c</fullName>
        <label>Influencer Type</label>
        <picklist>
            <controllingField>sf4twitter__Influencer__c</controllingField>
            <picklistValues>
                <fullName>Reporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Influencer__c</fullName>
        <inlineHelpText>Is this Contact an Influencer (ie Reporter?)</inlineHelpText>
        <label>Influencer</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Number__c</fullName>
        <label>Klout Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Score__c</fullName>
        <formula>IF( ABS( sf4twitter__Klout_Number__c )  &gt; 0, TEXT( sf4twitter__Klout_Number__c ) + &apos;  &apos; + IMAGE($Setup.sf4twitter__Twitter_Public_Configuration__c.sf4twitter__Klout_Score_logo__c,&apos;Klout&apos;,17,90), &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Klout Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Research_this_Contact__c</fullName>
        <formula>HYPERLINK(&quot;http://www.linkedin.com/pub/dir/&quot; &amp;  FirstName  &amp; &quot;/&quot; &amp;  LastName, IMAGE(&quot;/resource/linkedin&quot;, &quot;Lookup Contact on LinkedIn&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Research This Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Bio__c</fullName>
        <label>Twitter Bio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Creation_Date__c</fullName>
        <label>Twitter Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Follower_Count__c</fullName>
        <label>Twitter Follower Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Following_count__c</fullName>
        <label>Twitter Following Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Image_Url__c</fullName>
        <label>Twitter Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Last_Tweet__c</fullName>
        <label>Twitter Last Tweet</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Location__c</fullName>
        <label>Twitter Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Picture__c</fullName>
        <formula>HYPERLINK(&apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c,
IF( ( NOT( ISBLANK( sf4twitter__Twitter_Image_Url__c ) )), IMAGE( sf4twitter__Twitter_Image_Url__c ,&apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c, 48, 48), 
IF( NOT( ISBLANK( sf4twitter__Twitter_Username__c ) ), &apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c, &apos;&apos; ) )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Twitter Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Status_count__c</fullName>
        <label>Twitter Status Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Twitter User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Username__c</fullName>
        <label>Twitter Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__followed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the user is being followed by any account</description>
        <label>Followed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>suffix__c</fullName>
        <description>Suffix</description>
        <label>Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ta_fax_id__c</fullName>
        <label>Ta Fax Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_homeemail_id__c</fullName>
        <label>Ta HomeEmail Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_homephone_id__c</fullName>
        <label>Ta HomePhone Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_mobilephone_id__c</fullName>
        <label>TA Cell Phone Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_workemail_id__c</fullName>
        <label>Ta WorkEmail Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_workphone_id__c</fullName>
        <label>Ta WorkPhone Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllRJ</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>comments__c</field>
            <operation>contains</operation>
            <value>RJ</value>
        </filters>
        <label>All updated by RJ</label>
    </listViews>
    <listViews>
        <fullName>Contacts_in_Households</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Household_Old__c</columns>
        <columns>Preferred_Address__c</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Household_Old__c</field>
            <operation>notContain</operation>
            <value>NULL</value>
        </filters>
        <label>Contacts in Households</label>
    </listViews>
    <listViews>
        <fullName>Incomplete_Contacts</fullName>
        <booleanFilter>1 or 2 or 3 or 4 or 5</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>Household_Old__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Home_Address__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.FIRST_NAME</field>
            <operation>contains</operation>
            <value>#,&quot;,&apos;,*,&amp;,First&quot;</value>
        </filters>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>contains</operation>
            <value>#,&quot;,&apos;,*,&amp;,Last&quot;</value>
        </filters>
        <filters>
            <field>Household_Old__c</field>
            <operation>contains</operation>
            <value>#,&quot;,&apos;,*,&amp;&quot;</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.PHONE1</field>
            <operation>equals</operation>
        </filters>
        <label>Incomplete Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Household_Old__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>deceased_date__c</columns>
        <columns>deceased_flag__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contact_Status__c</columns>
        <columns>TaContactId__c</columns>
        <columns>Household_Old__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>HomeEmail__c</columns>
        <columns>Preferred_Email__c</columns>
        <columns>PreferredPhone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>email_in_name_and_household</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Household_Old__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.FIRST_NAME</field>
            <operation>contains</operation>
            <value>@</value>
        </filters>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>contains</operation>
            <value>@</value>
        </filters>
        <label>email@ in name and household</label>
    </listViews>
    <namedFilters>
        <fullName>nf_01IA0000001C2hFMAS_00NA0000007gb8PMAQ</fullName>
        <active>true</active>
        <field>Bequest__c.Contact__c</field>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>notEqual</operation>
            <value>WGBH ATS</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Planned Giving_Contact</name>
    </namedFilters>
    <recordTypes>
        <fullName>Contact_Standard</fullName>
        <active>true</active>
        <label>Contact Standard</label>
    </recordTypes>
    <validationRules>
        <fullName>Populated_Email_Field_Warning</fullName>
        <active>false</active>
        <description>This validation rule is only necessary for organizations that have data in the Email field before installing this package.  You don&apos;t need for this validation rule if you move all of the data from the Email field in to the NEW Work Email field.</description>
        <errorConditionFormula>AND(
NOT(ISCHANGED(Email)),
LEN(PRIORVALUE(Email))&gt;0,
ISCHANGED(Preferred_Email__c),
NOT(OR(
PRIORVALUE( Email) = PRIORVALUE( WorkEmail__c),
PRIORVALUE( Email) = PRIORVALUE( HomeEmail__c),
PRIORVALUE( Email) = PRIORVALUE( Assistant_Email__c),
PRIORVALUE( Email) = WorkEmail__c,
PRIORVALUE( Email) = HomeEmail__c,
PRIORVALUE( Email) = Assistant_Email__c
)
)
)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>The Email field MUST match the field that is designated by the Preferred Email picklist. To correct this, you must copy the existing value in the Email field to a new field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Populated_Phone_Field_Warning</fullName>
        <active>false</active>
        <description>This validation rule is only necessary for organizations that have data in the Phone field before installing this package.  You don&apos;t need this validation rule if move all of the data from the Phone field in to the NEW Work Phone field.</description>
        <errorConditionFormula>AND(
NOT(ISCHANGED(Phone)),
LEN(PRIORVALUE(Phone ))&gt;0,
ISCHANGED( PreferredPhone__c ),
NOT(OR( 
PRIORVALUE( Phone) = PRIORVALUE( WorkPhone__c ), 
PRIORVALUE( Phone) = PRIORVALUE( HomePhone), 
PRIORVALUE( Phone) = PRIORVALUE( MobilePhone ), 
PRIORVALUE( Phone) = PRIORVALUE( OtherPhone), 
PRIORVALUE( Phone) = WorkPhone__c, 
PRIORVALUE( Phone) = HomePhone, 
PRIORVALUE( Phone) = MobilePhone, 
PRIORVALUE( Phone) = OtherPhone 
) 
) 
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>The Phone field MUST match the filed that is designated by the Preferred Phone picklist. To correct this, you must copy the existing value in the Phone field to the designated preferred phone field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Preferred_Email</fullName>
        <active>false</active>
        <description>Requires the user to select a value in the Preferred Email picklist when email addresses are entered into the email fields.</description>
        <errorConditionFormula>AND(
ISPICKVAL(  Preferred_Email__c ,&quot;&quot;),
OR(
LEN(  HomeEmail__c  )&gt;0,
LEN(  WorkEmail__c  )&gt;0,
LEN(  Assistant_Email__c  )&gt;0
)
)</errorConditionFormula>
        <errorDisplayField>Preferred_Email__c</errorDisplayField>
        <errorMessage>You must select a Preferred Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Preferred_Phone</fullName>
        <active>false</active>
        <description>Requires the user to select a value in the Preferred Phone picklist when phone numbers are entered into the phone number fields.</description>
        <errorConditionFormula>AND(
ISPICKVAL( PreferredPhone__c ,&quot;&quot;),
OR(
LEN( HomePhone )&gt;0,
LEN( MobilePhone )&gt;0,
LEN( OtherPhone )&gt;0,
LEN( WorkPhone__c )&gt;0
)
)</errorConditionFormula>
        <errorDisplayField>PreferredPhone__c</errorDisplayField>
        <errorMessage>You must select a Preferred Phone</errorMessage>
    </validationRules>
</CustomObject>